--- a/index.html
+++ b/index.html
@@ -346,19 +346,16 @@
   <img class="footer-logo" src="./img/icono-blanco.svg" alt="Logo del portafolio">
   <p class="footer-texto text-center">Aprendo y creo todos los días.<br>Creemos un proyecto juntos.</p>
   <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
-    <a href="https://twitter.com/freecodecampES" target="_blank" rel="noopener noreferrer">
+    <a href="https://twitter.com/alain_as" target="_blank" rel="noopener noreferrer">
       <i class="bi bi-twitter"></i>
     </a>
-    <a href="https://github.com/freeCodeCamp/freeCodeCamp" target="_blank" rel="noopener noreferrer">
+    <a href="https://github.com/alainas12" target="_blank" rel="noopener noreferrer">
       <i class="bi bi-github"></i>
     </a>
     <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
       <i class="bi bi-linkedin"></i>
     </a>
-    <a href="https://www.instagram.com/freecodecamp/" target="_blank" rel="noopener noreferrer">
-      <i class="bi bi-instagram"></i>
-    </a>
-    <a href="mailto:janedoe@micorreo.com" target="_blank" rel="noopener noreferrer">
+    <a href="mailto:alainaguilar7@micorreo.com" target="_blank" rel="noopener noreferrer">
       <i class="bi bi-envelope"></i>
     </a>
   </div>
