--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
     <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
       <i class="bi bi-linkedin"></i>
     </a>
-    <a href="mailto:alainaguilar7@micorreo.com" target="_blank" rel="noopener noreferrer">
+    <a href="mailto:alainaguilar7@gmail.com" target="_blank" rel="noopener noreferrer">
       <i class="bi bi-envelope"></i>
     </a>
   </div>
